Added Ping Requests & OTP limiter
GET domain/ping gives some status messeges about the server and OTP Limiter Limits the OTP sending requests to 1 request per 120 seconds for a particular ip address

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EMAIL=bnksgcportal@gmail.com
 EMAIL_PASS=swxm kkeo furk xfbk
 JWT_KEY=morningofthephysicsexamandthenightbeforeing10
+MONGODB_CONNECTIONSTRING='mongodb+srv://paramayu:HRE8x52nfRRQr1gC@test.3uflnaa.mongodb.net/gc?retryWrites=true&w=majority&appName=TEST'
